--- a/views/single.ejs
+++ b/views/single.ejs
@@ -3,9 +3,9 @@
 <head>
     <title>Matcha | Single</title>
 
-    <!--<noscript>-->
-        <!--<meta http-equiv="refresh" content="0; url=/nojs"/>-->
-    <!--</noscript>-->
+    <noscript>
+        <meta http-equiv="refresh" content="0; url=/nojs"/>
+    </noscript>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
