--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -366,88 +366,25 @@
                     </div>
                 </div>
                 <div class="tab-pane" id="visits">
-                    <%= locals.users_that_have_visited_your_profil[0].username %>
-                    <%= locals.users_that_have_visited_your_profil[0].visiteur %>
-
-                    <%= locals.users_that_have_visited_your_profil[1].username %>
-                    <%= locals.users_that_have_visited_your_profil[1].visiteur %>
-
-                    <%= locals.users_that_have_visited_your_profil[2].username %>
-                    <%= locals.users_that_have_visited_your_profil[2].visiteur %>
-
-
-                    <!--todo: Iterer le tableau avec les infirmations recu -->
 
                     <div class="table-users">
                         <div class="headerr">Users</div>
 
                         <table cellspacing="0">
                             <tr>
-                                <th>Picture</th>
                                 <th>Username</th>
-                                <th>Age</th>
-                                <th>Distance</th>
-                                <th width="230">Bio</th>
+                                <th>Date Visite</th>
                             </tr>
 
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/1" alt="" /></td>
-                                <td>Jane Doe</td>
-                                <td>jane.doe@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </td>
-                            </tr>
+                            <% for(let i = 0; i < locals.users_that_have_visited_your_profil.length; i++) { %>
+                                <tr>
+                                    <td>
+                                        <a href="http://0.0.0.0:8080/single?<%= locals.users_that_have_visited_your_profil[i].visiteur %>"> <%= locals.users_that_have_visited_your_profil[i].visiteur %> </a>
+                                    </td>
+                                    <td><%= locals.users_that_have_visited_your_profil[i].date_visite %></td>
+                                </tr>
 
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/sports/2" alt="" /></td>
-                                <td>John Doe</td>
-                                <td>john.doe@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Blanditiis, aliquid numquam iure voluptatibus ut maiores explicabo ducimus neque, nesciunt rerum perferendis, inventore.</td>
-                            </tr>
-
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/9" alt="" /></td>
-                                <td>Jane Smith</td>
-                                <td>jane.smith@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td> Culpa praesentium unde pariatur fugit eos recusandae voluptas.</td>
-                            </tr>
-
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
-                                <td>John Smith</td>
-                                <td>john.smith@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
-                                    temporibus quas, dolorem impedit.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/3" alt="" /></td>
-                                <td>John Smith</td>
-                                <td>john.smith@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime temporibus quas, dolorem impedit.</td>
-                            </tr>
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
-                                <td>John Smith</td>
-                                <td>john.smith@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
-                                    temporibus quas, dolorem impedit.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><img src="http://lorempixel.com/100/100/people/3" alt=""/></td>
-                                <td>John Smith</td>
-                                <td>john.smith@foo.com</td>
-                                <td>01 800 2000</td>
-                                <td>Aut voluptatum accusantium, eveniet, sapiente quaerat adipisci consequatur maxime
-                                    temporibus quas, dolorem impedit.
-                                </td>
-                            </tr>
+                            <% } %>
                         </table>
                     </div>
                 </div>
