--- a/views/single.ejs
+++ b/views/single.ejs
@@ -91,7 +91,7 @@
             </div>
 
             <div class="cont span_2_of_profile">
-                <h4><a href="#"><%= locals.user.first_name + " " + locals.user.last_name%></a></h4>
+                <h4><%= locals.user.first_name + " " + locals.user.last_name%></h4>
                 <table class="profile-fields">
                     <tbody>
                     <tr>
