--- a/public/assets/css/chat.css
+++ b/public/assets/css/chat.css
@@ -594,6 +594,12 @@ body {
 #frame .content .messages ul li.sent p {
   background: #435f7a;
   color: #f5f5f5;
+  word-wrap: break-word;
+}
+#frame .content .messages ul li.sent.nomatch p {
+  background: #d23030;
+  color: #f5f5f5;
+  word-wrap: break-word;
 }
 #frame .content .messages ul li.replies img {
   float: right;
