--- a/public/assets/css/notif.css
+++ b/public/assets/css/notif.css
@@ -4,11 +4,12 @@
     position: relative;
     /* position: absolute; */
     /* top: 50%; */
-    left: 8%;
+    left: 10%;
     /* margin-right: -50%; */
     /* -webkit-transform: translate(-50%, -50%); */
     /* transform: translate(-50%, -50%); */
     /* text-align: center; */
+    display: inline-block;
 }
 
 /* button {
