--- a/public/assets/css/notif.css
+++ b/public/assets/css/notif.css
@@ -93,16 +93,29 @@ button:hover {
 .notif_box{
     opacity: 0;
     position: absolute;
-    background-color: white;
-    border: 0px solid black;
+    background-color: #fff;
+    border: 0px solid white;
+    border-radius: 0.5em;
+    top: 5.2em;
     left: 56%;
     width: 20%;
-    height: 193px;
-    max-width: 20%;
+    height: 183px;
+    max-width: 232px;
     z-index: 1;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     overflow-y: scroll;
     overflow-x: hidden;
+    transition: opacity 0.5s;
+    text-align: left;
+}
+
+.notif_box::-webkit-scrollbar {
+  width: 8px;
+  background: transparent;
+}
+
+.notif_box::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .on{
@@ -112,10 +125,25 @@ button:hover {
     padding: 0px;
     margin-bottom: 0;
 }
+
+.notif_box ul li {
+    background-color: white;
+    /* border-radius: 1.2em; */
+    margin: 0.3em;
+
+}
 .inside{
 
-    border: 0.5px solid black;
+    border: 0.5px solid white;
     padding : 10px ;
+}
+
+.inside.title{
+
+    border-bottom: 0.5px solid black;
+    font-weight: bold;
+    color: #435f7a;
+    /* padding : 10px ; */
 }
 
 .unread{
